WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151271
[WinCairo][MediaFoundation] Video rendered at wrong position.
https://bugs.webkit.org/show_bug.cgi?id=151271
Summary
[WinCairo][MediaFoundation] Video rendered at wrong position.
peavo
Reported
2015-11-13 12:06:43 PST
Watching videos at YouTube shows that we are not rendering them at the correct position.
Attachments
Patch
(1.93 KB, patch)
2015-11-13 12:58 PST
,
peavo
no flags
Details
Formatted Diff
Diff
Patch
(1.93 KB, patch)
2015-11-13 13:00 PST
,
peavo
achristensen
: review+
achristensen
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-11-13 12:58:38 PST
Created
attachment 265491
[details]
Patch
peavo
Comment 2
2015-11-13 13:00:37 PST
Created
attachment 265493
[details]
Patch
Alex Christensen
Comment 3
2015-11-13 13:03:56 PST
Comment on
attachment 265493
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=265493&action=review
> Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:2692 > + FloatRect destRect = r;
This isn't needed if it's used only once and r is not used anywhere else. Just rename the parameter.
peavo
Comment 4
2015-11-13 13:39:42 PST
(In reply to
comment #3
)
> Comment on
attachment 265493
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=265493&action=review
> > > Source/WebCore/platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:2692 > > + FloatRect destRect = r; > > This isn't needed if it's used only once and r is not used anywhere else. > Just rename the parameter.
Thanks for reviewing :) I will rename the parameter.
peavo
Comment 5
2015-11-13 13:52:26 PST
Committed
r192441
: <
http://trac.webkit.org/changeset/192441
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug