[WinCairo][MediaFoundation] Video rendered at wrong position. https://bugs.webkit.org/show_bug.cgi?id=151271

Reviewed by Alex Christensen.

The source rectangle used when blitting a frame to the graphics context
should have offset (0, 0).

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::Direct3DPresenter::paintCurrentFrame):


Canonical link: https://commits.webkit.org/169440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192441 268f45cc-cd09-0410-ab3c-d52691b4dbfc